@@ -1,6 +1,6 @@
 ---
 name: Config-Model-CursesUI
-version: 1.102
+version: 1.103
 author:
   - Dominique Dumont (ddumont at cpan dot org)
 abstract: Curses interface to edit config data through Config::Model
@@ -8,14 +8,16 @@ license: lgpl
 resources:
   license: http://opensource.org/licenses/lgpl-license.php
 requires:
-  Config::Model: 0.633
+  Config::Model: 0.637
   Curses::UI: 0.9606
   Exception::Class: 0
+build_requires:
+  Log::Log4perl: 0
 provides:
   Config::Model::CursesUI:
     file: lib/Config/Model/CursesUI.pm
-    version: 1.102
-generated_by: Module::Build version 0.3
+    version: 1.103
+generated_by: Module::Build version 0.33
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
